samples/_failures_safe/1761602052_311ade_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_386280e9.c: In function ‘main’:
./samples/SAFE/__tmp_386280e9.c:140:5: error: expected declaration or statement at end of input
  140 |     if (scanf("%d", &start) != 1 || start < 0 || start >= nodes) {
      |     ^~
./samples/SAFE/__tmp_386280e9.c:140:5: error: expected declaration or statement at end of input
